<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ConnexionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/connexion_header_logo"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/fsi_logo" />

                    <TextView
                        android:id="@+id/connexion_header_titre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/app_titre"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp">

                <TextView
                    android:id="@+id/connexion_titre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connexion_titre"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/connexion_label_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/id"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/connexion_input_id"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/connexion_input_background"
                        android:ems="10"
                        android:hint="@string/connexion_login_hint"
                        android:inputType="textPersonName"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/connexion_label_mdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mdp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/connexion_input_mdp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/connexion_input_background"
                        android:ems="10"
                        android:hint="@string/connexion_mdp_hint"
                        android:inputType="textWebPassword"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp" />

                    <TextView
                        android:id="@+id/connexion_label_mdp_oublie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="end"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:text="@string/connexion_mdp_oublie" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/connexion_boutton_valider"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/connexion_btn_valider" />

                    <TextView
                        android:id="@+id/connexion_text_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/button_secondary_dark" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>