<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="6dp"
    android:paddingTop="16dp"
    android:paddingEnd="6dp"
    android:paddingBottom="22dp"
    tools:context=".Fragments.MesInfos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mes_infos_perso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infos_perso"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/mes_infos_perso_expend"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:rotation="180"
                    android:src="@drawable/ic_baseline_expand_more_24" />

            </LinearLayout>

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borders_clicked_dark" />

            <LinearLayout
                android:id="@+id/mes_infos_perso_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_nom_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/nom"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_nom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="Boumallassa"
                        android:textAllCaps="true"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_prenom_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/prenom"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_prenom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="Ayoub"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_id_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/id"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="a.boumallassa"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_mail_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/mail"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_mail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="a.boumallassa@ort.fr"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_classe_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/accueil_mes_infos_classe"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_classe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="2sio"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_spe_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/infos_perso_spe"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_spe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="Slam"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_date_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/infos_perso_date_nai"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="07/07/2001"
                        android:textColor="@color/black_clear" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mes_infos_adresse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adresse_perso"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/mes_infos_adresse_expend"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:rotation="180"
                    android:src="@drawable/ic_baseline_expand_more_24" />

            </LinearLayout>

            <View
                android:id="@+id/view10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/borders_clicked_dark" />

            <LinearLayout
                android:id="@+id/mes_infos_adresse_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_ville_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/ville"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_ville"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="Saint-Alban de Roche"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_rue_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/rue"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_rue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="Chemin du Bois"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_num_rue_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/num_rue"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_num_rue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="9 bis"
                        android:textColor="@color/black_clear" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/mes_infos_cp_titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/cp"
                        android:textColor="@color/black_clear"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mes_info_perso_cp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="end"
                        android:text="38080"
                        android:textColor="@color/black_clear" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>